@@ -3,6 +3,7 @@ Changes for 2.4.7rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-7492] fixed "Undefined index" when importing host without macros (Gunars)
 ....I....T [ZBX-8989] moved Total memory item from Filesystems to Memory application in Template OS Windows (gleb)
 ...G...... [ZBX-9739] fixed agent crash when active check fails without setting error message (wiper)
 
@@ -655,6 +656,7 @@ Changes for 2.2.11rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-7492] fixed "Undefined index" when importing host without macros (Gunars)
 ....I....T [ZBX-8989] moved Total memory item from Filesystems to Memory application in Template OS Windows (gleb)
 
 --------------------------------------------------------------------------------
